managed to fix the multShipsOverlay. it had a class that was centering it after it had been rendered on the right of the screen. removed that class and tuned it to be exactly over the p2 board and exactly over the p1 board once it slides left. BUG: need to figure out why the coords taken overlay is still hiding behind other overlays despite having a high z-index

--- a/src/kFrames.css
+++ b/src/kFrames.css
@@ -69,11 +69,11 @@
 @keyframes slideLeft {
   from {
     /* top: 30vh; */
-    left: 80vw;
+    left: 66vw;
   }
   to {
     /* top: 30vh; */
-    left: 20vw;
+    left: 34vw;
   }
 }
 
